Styling main page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
     </head>
     <body>
         <div class="app">
-            <header></header>
-            <main></main>
-            <footer></footer>
+            <nav>
+                <div class="hero">
+                    <h1>Andmana</h1>
+                </div>
+                <div class="theme-container">
+                    <button class="theme-button">
+                        <div class="theme-indicator"></div>
+                    </button>
+                </div>
+            </nav>
+            <main>
+                <section class="about-me"></section>
+                <section class="my-work"></section>
+                <section class="contact-me"></section>
+            </main>
+            <footer>
+                <div class="footer-text">
+                    Code in
+                    <a href="https://github.com/Andmana/Homepage">Github</a>
+                </div>
+            </footer>
         </div>
         <script src="./script.js"></script>
     </body>
