--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                     alt=""
                                 />
                             </picture>
-                            <h2>AMindiawn</h2>
+                            <h2 aria-hidden="true">ANDMANA</h2>
                         </div>
                         <div class="profile-detail">
                             <h1>ABOUT ME</h1>
